--- a/midterm.ipynb
+++ b/midterm.ipynb
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "['AUTO', 'JET', 'AAL', 'VOD', 'MRO', 'LAND']"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,15 +189,15 @@
    "source": [
     "#look at company names and save them in a list\n",
     "companies = []\n",
-    "for set in range(len(data)):\n",
-    "    print(data[set]['data']['company'])\n",
-    "    companies.append(data[set]['data']['company'])\n",
+    "for sets in range(len(data)):\n",
+    "    print(data[sets]['data']['company'])\n",
+    "    companies.append(data[sets]['data']['company'])\n",
     "companies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "['Date', 'Open', 'High', 'Low', 'Close', 'Adj.Close', 'Volume']"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,29 +219,447 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "'2019-01-02'"
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[0]['data']['data'][0]['Date']"
+    "#setup empty df with column_names\n",
+    "df = pd.DataFrame([])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-01-02</td>\n",
+       "      <td>3.0199999809265137</td>\n",
+       "      <td>3.450000047683716</td>\n",
+       "      <td>3.0199999809265137</td>\n",
+       "      <td>3.430000066757202</td>\n",
+       "      <td>3.430000066757202</td>\n",
+       "      <td>18200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>3.200000047683716</td>\n",
+       "      <td>3.4200000762939453</td>\n",
+       "      <td>3.200000047683716</td>\n",
+       "      <td>3.3499999046325684</td>\n",
+       "      <td>3.3499999046325684</td>\n",
+       "      <td>52000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-01-04</td>\n",
+       "      <td>3.4100000858306885</td>\n",
+       "      <td>3.4200000762939453</td>\n",
+       "      <td>3.309999942779541</td>\n",
+       "      <td>3.3299999237060547</td>\n",
+       "      <td>3.3299999237060547</td>\n",
+       "      <td>27200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019-01-07</td>\n",
+       "      <td>3.3499999046325684</td>\n",
+       "      <td>3.4200000762939453</td>\n",
+       "      <td>3.069999933242798</td>\n",
+       "      <td>3.1700000762939453</td>\n",
+       "      <td>3.1700000762939453</td>\n",
+       "      <td>24800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019-01-08</td>\n",
+       "      <td>3.200000047683716</td>\n",
+       "      <td>3.299999952316284</td>\n",
+       "      <td>3.0399999618530273</td>\n",
+       "      <td>3.1500000953674316</td>\n",
+       "      <td>3.1500000953674316</td>\n",
+       "      <td>7300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8599</th>\n",
+       "      <td>2020-11-17</td>\n",
+       "      <td>14.5600004196167</td>\n",
+       "      <td>14.843000411987305</td>\n",
+       "      <td>14.520000457763672</td>\n",
+       "      <td>14.739999771118164</td>\n",
+       "      <td>14.695181846618652</td>\n",
+       "      <td>298700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8600</th>\n",
+       "      <td>2020-11-18</td>\n",
+       "      <td>14.899999618530273</td>\n",
+       "      <td>15.220000267028809</td>\n",
+       "      <td>14.779999732971191</td>\n",
+       "      <td>14.800000190734863</td>\n",
+       "      <td>14.755000114440918</td>\n",
+       "      <td>351800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8601</th>\n",
+       "      <td>2020-11-19</td>\n",
+       "      <td>14.770000457763672</td>\n",
+       "      <td>14.960000038146973</td>\n",
+       "      <td>14.6899995803833</td>\n",
+       "      <td>14.960000038146973</td>\n",
+       "      <td>14.960000038146973</td>\n",
+       "      <td>256100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8602</th>\n",
+       "      <td>2020-11-20</td>\n",
+       "      <td>14.960000038146973</td>\n",
+       "      <td>15.100000381469727</td>\n",
+       "      <td>14.850000381469727</td>\n",
+       "      <td>15.029999732971191</td>\n",
+       "      <td>15.029999732971191</td>\n",
+       "      <td>195800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8603</th>\n",
+       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8604 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               0                   1                   2                   3  \\\n",
+       "0     2019-01-02  3.0199999809265137   3.450000047683716  3.0199999809265137   \n",
+       "1     2019-01-03   3.200000047683716  3.4200000762939453   3.200000047683716   \n",
+       "2     2019-01-04  3.4100000858306885  3.4200000762939453   3.309999942779541   \n",
+       "3     2019-01-07  3.3499999046325684  3.4200000762939453   3.069999933242798   \n",
+       "4     2019-01-08   3.200000047683716   3.299999952316284  3.0399999618530273   \n",
+       "...          ...                 ...                 ...                 ...   \n",
+       "8599  2020-11-17    14.5600004196167  14.843000411987305  14.520000457763672   \n",
+       "8600  2020-11-18  14.899999618530273  15.220000267028809  14.779999732971191   \n",
+       "8601  2020-11-19  14.770000457763672  14.960000038146973    14.6899995803833   \n",
+       "8602  2020-11-20  14.960000038146973  15.100000381469727  14.850000381469727   \n",
+       "8603                             NaN                 NaN                 NaN   \n",
+       "\n",
+       "                       4                   5       6  \n",
+       "0      3.430000066757202   3.430000066757202   18200  \n",
+       "1     3.3499999046325684  3.3499999046325684   52000  \n",
+       "2     3.3299999237060547  3.3299999237060547   27200  \n",
+       "3     3.1700000762939453  3.1700000762939453   24800  \n",
+       "4     3.1500000953674316  3.1500000953674316    7300  \n",
+       "...                  ...                 ...     ...  \n",
+       "8599  14.739999771118164  14.695181846618652  298700  \n",
+       "8600  14.800000190734863  14.755000114440918  351800  \n",
+       "8601  14.960000038146973  14.960000038146973  256100  \n",
+       "8602  15.029999732971191  15.029999732971191  195800  \n",
+       "8603                 NaN                 NaN     NaN  \n",
+       "\n",
+       "[8604 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#access every column in every entry of every set, but data into a list, add list to df\n",
+    "for sets in range(len(data)):\n",
+    "    for entry in range(len(data[sets]['data']['data'])):\n",
+    "        entry_list = []\n",
+    "        #entry_df = pd.DataFrame([[0,0,0,0,0,0,0]], columns = column_names)\n",
+    "        for columns in range(len(column_names)):\n",
+    "            try:\n",
+    "                entry_list.append(data[sets]['data']['data'][entry][column_names[columns]])\n",
+    "            except:\n",
+    "                pass\n",
+    "        entry_series = pd.Series(entry_list)\n",
+    "        df = df.append(entry_series, ignore_index=True)\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Adj.Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-01-02</td>\n",
+       "      <td>3.0199999809265137</td>\n",
+       "      <td>3.450000047683716</td>\n",
+       "      <td>3.0199999809265137</td>\n",
+       "      <td>3.430000066757202</td>\n",
+       "      <td>3.430000066757202</td>\n",
+       "      <td>18200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>3.200000047683716</td>\n",
+       "      <td>3.4200000762939453</td>\n",
+       "      <td>3.200000047683716</td>\n",
+       "      <td>3.3499999046325684</td>\n",
+       "      <td>3.3499999046325684</td>\n",
+       "      <td>52000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-01-04</td>\n",
+       "      <td>3.4100000858306885</td>\n",
+       "      <td>3.4200000762939453</td>\n",
+       "      <td>3.309999942779541</td>\n",
+       "      <td>3.3299999237060547</td>\n",
+       "      <td>3.3299999237060547</td>\n",
+       "      <td>27200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019-01-07</td>\n",
+       "      <td>3.3499999046325684</td>\n",
+       "      <td>3.4200000762939453</td>\n",
+       "      <td>3.069999933242798</td>\n",
+       "      <td>3.1700000762939453</td>\n",
+       "      <td>3.1700000762939453</td>\n",
+       "      <td>24800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019-01-08</td>\n",
+       "      <td>3.200000047683716</td>\n",
+       "      <td>3.299999952316284</td>\n",
+       "      <td>3.0399999618530273</td>\n",
+       "      <td>3.1500000953674316</td>\n",
+       "      <td>3.1500000953674316</td>\n",
+       "      <td>7300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8599</th>\n",
+       "      <td>2020-11-17</td>\n",
+       "      <td>14.5600004196167</td>\n",
+       "      <td>14.843000411987305</td>\n",
+       "      <td>14.520000457763672</td>\n",
+       "      <td>14.739999771118164</td>\n",
+       "      <td>14.695181846618652</td>\n",
+       "      <td>298700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8600</th>\n",
+       "      <td>2020-11-18</td>\n",
+       "      <td>14.899999618530273</td>\n",
+       "      <td>15.220000267028809</td>\n",
+       "      <td>14.779999732971191</td>\n",
+       "      <td>14.800000190734863</td>\n",
+       "      <td>14.755000114440918</td>\n",
+       "      <td>351800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8601</th>\n",
+       "      <td>2020-11-19</td>\n",
+       "      <td>14.770000457763672</td>\n",
+       "      <td>14.960000038146973</td>\n",
+       "      <td>14.6899995803833</td>\n",
+       "      <td>14.960000038146973</td>\n",
+       "      <td>14.960000038146973</td>\n",
+       "      <td>256100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8602</th>\n",
+       "      <td>2020-11-20</td>\n",
+       "      <td>14.960000038146973</td>\n",
+       "      <td>15.100000381469727</td>\n",
+       "      <td>14.850000381469727</td>\n",
+       "      <td>15.029999732971191</td>\n",
+       "      <td>15.029999732971191</td>\n",
+       "      <td>195800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8603</th>\n",
+       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8604 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Date                Open                High                 Low  \\\n",
+       "0     2019-01-02  3.0199999809265137   3.450000047683716  3.0199999809265137   \n",
+       "1     2019-01-03   3.200000047683716  3.4200000762939453   3.200000047683716   \n",
+       "2     2019-01-04  3.4100000858306885  3.4200000762939453   3.309999942779541   \n",
+       "3     2019-01-07  3.3499999046325684  3.4200000762939453   3.069999933242798   \n",
+       "4     2019-01-08   3.200000047683716   3.299999952316284  3.0399999618530273   \n",
+       "...          ...                 ...                 ...                 ...   \n",
+       "8599  2020-11-17    14.5600004196167  14.843000411987305  14.520000457763672   \n",
+       "8600  2020-11-18  14.899999618530273  15.220000267028809  14.779999732971191   \n",
+       "8601  2020-11-19  14.770000457763672  14.960000038146973    14.6899995803833   \n",
+       "8602  2020-11-20  14.960000038146973  15.100000381469727  14.850000381469727   \n",
+       "8603                             NaN                 NaN                 NaN   \n",
+       "\n",
+       "                   Close           Adj.Close  Volume  \n",
+       "0      3.430000066757202   3.430000066757202   18200  \n",
+       "1     3.3499999046325684  3.3499999046325684   52000  \n",
+       "2     3.3299999237060547  3.3299999237060547   27200  \n",
+       "3     3.1700000762939453  3.1700000762939453   24800  \n",
+       "4     3.1500000953674316  3.1500000953674316    7300  \n",
+       "...                  ...                 ...     ...  \n",
+       "8599  14.739999771118164  14.695181846618652  298700  \n",
+       "8600  14.800000190734863  14.755000114440918  351800  \n",
+       "8601  14.960000038146973  14.960000038146973  256100  \n",
+       "8602  15.029999732971191  15.029999732971191  195800  \n",
+       "8603                 NaN                 NaN     NaN  \n",
+       "\n",
+       "[8604 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#got the df with right column names; problem: no index for where which dataset ends\n",
+    "df.columns = column_names\n",
+    "df"
    ]
   },
   {
@@ -249,11 +667,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#looking at the keys of all 5 datasets\n",
-    "for set in range(len(data)):\n",
-    "    print(data[set]['data']['data'].keys())"
-   ]
+   "source": []
   }
  ],
  "metadata": {
