Got a big df with column names and indexes for where single sets end, let's see how far i get with data wrangling.

--- a/midterm.ipynb
+++ b/midterm.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "['AUTO', 'JET', 'AAL', 'VOD', 'MRO', 'LAND']"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "['Date', 'Open', 'High', 'Low', 'Close', 'Adj.Close', 'Volume']"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#access every column in every entry of every set, but data into a list, add list to df\n",
+    "list_dfs = []\n",
+    "for sets in range(len(data)):\n",
+    "    for entry in range(len(data[sets]['data']['data'])):\n",
+    "        entry_list = []\n",
+    "        #entry_df = pd.DataFrame([[0,0,0,0,0,0,0]], columns = column_names)\n",
+    "        for columns in range(len(column_names)):\n",
+    "            try:\n",
+    "                entry_list.append(data[sets]['data']['data'][entry][column_names[columns]])\n",
+    "            except:\n",
+    "                pass\n",
+    "        entry_series = pd.Series(entry_list)\n",
+    "        df = df.append(entry_series, ignore_index=True)\n",
+    "    list_dfs.append(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -292,6 +314,7 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th>0</th>\n",
        "      <th>1</th>\n",
@@ -304,6 +327,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">AUTO</th>\n",
        "      <th>0</th>\n",
        "      <td>2019-01-02</td>\n",
        "      <td>3.0199999809265137</td>\n",
@@ -355,6 +379,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -364,7 +389,8 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8599</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">LAND</th>\n",
+       "      <th>2863</th>\n",
        "      <td>2020-11-17</td>\n",
        "      <td>14.5600004196167</td>\n",
        "      <td>14.843000411987305</td>\n",
@@ -374,7 +400,7 @@
        "      <td>298700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8600</th>\n",
+       "      <th>2864</th>\n",
        "      <td>2020-11-18</td>\n",
        "      <td>14.899999618530273</td>\n",
        "      <td>15.220000267028809</td>\n",
@@ -384,7 +410,7 @@
        "      <td>351800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8601</th>\n",
+       "      <th>2865</th>\n",
        "      <td>2020-11-19</td>\n",
        "      <td>14.770000457763672</td>\n",
        "      <td>14.960000038146973</td>\n",
@@ -394,7 +420,7 @@
        "      <td>256100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8602</th>\n",
+       "      <th>2866</th>\n",
        "      <td>2020-11-20</td>\n",
        "      <td>14.960000038146973</td>\n",
        "      <td>15.100000381469727</td>\n",
@@ -404,7 +430,7 @@
        "      <td>195800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8603</th>\n",
+       "      <th>2867</th>\n",
        "      <td></td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -415,64 +441,52 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>8604 rows × 7 columns</p>\n",
+       "<p>10029 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "               0                   1                   2                   3  \\\n",
-       "0     2019-01-02  3.0199999809265137   3.450000047683716  3.0199999809265137   \n",
-       "1     2019-01-03   3.200000047683716  3.4200000762939453   3.200000047683716   \n",
-       "2     2019-01-04  3.4100000858306885  3.4200000762939453   3.309999942779541   \n",
-       "3     2019-01-07  3.3499999046325684  3.4200000762939453   3.069999933242798   \n",
-       "4     2019-01-08   3.200000047683716   3.299999952316284  3.0399999618530273   \n",
-       "...          ...                 ...                 ...                 ...   \n",
-       "8599  2020-11-17    14.5600004196167  14.843000411987305  14.520000457763672   \n",
-       "8600  2020-11-18  14.899999618530273  15.220000267028809  14.779999732971191   \n",
-       "8601  2020-11-19  14.770000457763672  14.960000038146973    14.6899995803833   \n",
-       "8602  2020-11-20  14.960000038146973  15.100000381469727  14.850000381469727   \n",
-       "8603                             NaN                 NaN                 NaN   \n",
+       "                    0                   1                   2  \\\n",
+       "AUTO 0     2019-01-02  3.0199999809265137   3.450000047683716   \n",
+       "     1     2019-01-03   3.200000047683716  3.4200000762939453   \n",
+       "     2     2019-01-04  3.4100000858306885  3.4200000762939453   \n",
+       "     3     2019-01-07  3.3499999046325684  3.4200000762939453   \n",
+       "     4     2019-01-08   3.200000047683716   3.299999952316284   \n",
+       "...               ...                 ...                 ...   \n",
+       "LAND 2863  2020-11-17    14.5600004196167  14.843000411987305   \n",
+       "     2864  2020-11-18  14.899999618530273  15.220000267028809   \n",
+       "     2865  2020-11-19  14.770000457763672  14.960000038146973   \n",
+       "     2866  2020-11-20  14.960000038146973  15.100000381469727   \n",
+       "     2867                             NaN                 NaN   \n",
        "\n",
-       "                       4                   5       6  \n",
-       "0      3.430000066757202   3.430000066757202   18200  \n",
-       "1     3.3499999046325684  3.3499999046325684   52000  \n",
-       "2     3.3299999237060547  3.3299999237060547   27200  \n",
-       "3     3.1700000762939453  3.1700000762939453   24800  \n",
-       "4     3.1500000953674316  3.1500000953674316    7300  \n",
-       "...                  ...                 ...     ...  \n",
-       "8599  14.739999771118164  14.695181846618652  298700  \n",
-       "8600  14.800000190734863  14.755000114440918  351800  \n",
-       "8601  14.960000038146973  14.960000038146973  256100  \n",
-       "8602  15.029999732971191  15.029999732971191  195800  \n",
-       "8603                 NaN                 NaN     NaN  \n",
+       "                            3                   4                   5       6  \n",
+       "AUTO 0     3.0199999809265137   3.430000066757202   3.430000066757202   18200  \n",
+       "     1      3.200000047683716  3.3499999046325684  3.3499999046325684   52000  \n",
+       "     2      3.309999942779541  3.3299999237060547  3.3299999237060547   27200  \n",
+       "     3      3.069999933242798  3.1700000762939453  3.1700000762939453   24800  \n",
+       "     4     3.0399999618530273  3.1500000953674316  3.1500000953674316    7300  \n",
+       "...                       ...                 ...                 ...     ...  \n",
+       "LAND 2863  14.520000457763672  14.739999771118164  14.695181846618652  298700  \n",
+       "     2864  14.779999732971191  14.800000190734863  14.755000114440918  351800  \n",
+       "     2865    14.6899995803833  14.960000038146973  14.960000038146973  256100  \n",
+       "     2866  14.850000381469727  15.029999732971191  15.029999732971191  195800  \n",
+       "     2867                 NaN                 NaN                 NaN     NaN  \n",
        "\n",
-       "[8604 rows x 7 columns]"
+       "[10029 rows x 7 columns]"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#access every column in every entry of every set, but data into a list, add list to df\n",
-    "for sets in range(len(data)):\n",
-    "    for entry in range(len(data[sets]['data']['data'])):\n",
-    "        entry_list = []\n",
-    "        #entry_df = pd.DataFrame([[0,0,0,0,0,0,0]], columns = column_names)\n",
-    "        for columns in range(len(column_names)):\n",
-    "            try:\n",
-    "                entry_list.append(data[sets]['data']['data'][entry][column_names[columns]])\n",
-    "            except:\n",
-    "                pass\n",
-    "        entry_series = pd.Series(entry_list)\n",
-    "        df = df.append(entry_series, ignore_index=True)\n",
-    "\n",
-    "df"
+    "big_df = pd.concat(list_dfs, keys = companies)\n",
+    "big_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -496,6 +510,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th></th>\n",
        "      <th>Date</th>\n",
        "      <th>Open</th>\n",
        "      <th>High</th>\n",
@@ -507,6 +522,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">AUTO</th>\n",
        "      <th>0</th>\n",
        "      <td>2019-01-02</td>\n",
        "      <td>3.0199999809265137</td>\n",
@@ -558,6 +574,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -567,7 +584,8 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8599</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">LAND</th>\n",
+       "      <th>2863</th>\n",
        "      <td>2020-11-17</td>\n",
        "      <td>14.5600004196167</td>\n",
        "      <td>14.843000411987305</td>\n",
@@ -577,7 +595,7 @@
        "      <td>298700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8600</th>\n",
+       "      <th>2864</th>\n",
        "      <td>2020-11-18</td>\n",
        "      <td>14.899999618530273</td>\n",
        "      <td>15.220000267028809</td>\n",
@@ -587,7 +605,7 @@
        "      <td>351800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8601</th>\n",
+       "      <th>2865</th>\n",
        "      <td>2020-11-19</td>\n",
        "      <td>14.770000457763672</td>\n",
        "      <td>14.960000038146973</td>\n",
@@ -597,7 +615,7 @@
        "      <td>256100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8602</th>\n",
+       "      <th>2866</th>\n",
        "      <td>2020-11-20</td>\n",
        "      <td>14.960000038146973</td>\n",
        "      <td>15.100000381469727</td>\n",
@@ -607,7 +625,7 @@
        "      <td>195800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8603</th>\n",
+       "      <th>2867</th>\n",
        "      <td></td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -618,48 +636,48 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>8604 rows × 7 columns</p>\n",
+       "<p>10029 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Date                Open                High                 Low  \\\n",
-       "0     2019-01-02  3.0199999809265137   3.450000047683716  3.0199999809265137   \n",
-       "1     2019-01-03   3.200000047683716  3.4200000762939453   3.200000047683716   \n",
-       "2     2019-01-04  3.4100000858306885  3.4200000762939453   3.309999942779541   \n",
-       "3     2019-01-07  3.3499999046325684  3.4200000762939453   3.069999933242798   \n",
-       "4     2019-01-08   3.200000047683716   3.299999952316284  3.0399999618530273   \n",
-       "...          ...                 ...                 ...                 ...   \n",
-       "8599  2020-11-17    14.5600004196167  14.843000411987305  14.520000457763672   \n",
-       "8600  2020-11-18  14.899999618530273  15.220000267028809  14.779999732971191   \n",
-       "8601  2020-11-19  14.770000457763672  14.960000038146973    14.6899995803833   \n",
-       "8602  2020-11-20  14.960000038146973  15.100000381469727  14.850000381469727   \n",
-       "8603                             NaN                 NaN                 NaN   \n",
+       "                 Date                Open                High  \\\n",
+       "AUTO 0     2019-01-02  3.0199999809265137   3.450000047683716   \n",
+       "     1     2019-01-03   3.200000047683716  3.4200000762939453   \n",
+       "     2     2019-01-04  3.4100000858306885  3.4200000762939453   \n",
+       "     3     2019-01-07  3.3499999046325684  3.4200000762939453   \n",
+       "     4     2019-01-08   3.200000047683716   3.299999952316284   \n",
+       "...               ...                 ...                 ...   \n",
+       "LAND 2863  2020-11-17    14.5600004196167  14.843000411987305   \n",
+       "     2864  2020-11-18  14.899999618530273  15.220000267028809   \n",
+       "     2865  2020-11-19  14.770000457763672  14.960000038146973   \n",
+       "     2866  2020-11-20  14.960000038146973  15.100000381469727   \n",
+       "     2867                             NaN                 NaN   \n",
        "\n",
-       "                   Close           Adj.Close  Volume  \n",
-       "0      3.430000066757202   3.430000066757202   18200  \n",
-       "1     3.3499999046325684  3.3499999046325684   52000  \n",
-       "2     3.3299999237060547  3.3299999237060547   27200  \n",
-       "3     3.1700000762939453  3.1700000762939453   24800  \n",
-       "4     3.1500000953674316  3.1500000953674316    7300  \n",
-       "...                  ...                 ...     ...  \n",
-       "8599  14.739999771118164  14.695181846618652  298700  \n",
-       "8600  14.800000190734863  14.755000114440918  351800  \n",
-       "8601  14.960000038146973  14.960000038146973  256100  \n",
-       "8602  15.029999732971191  15.029999732971191  195800  \n",
-       "8603                 NaN                 NaN     NaN  \n",
+       "                          Low               Close           Adj.Close  Volume  \n",
+       "AUTO 0     3.0199999809265137   3.430000066757202   3.430000066757202   18200  \n",
+       "     1      3.200000047683716  3.3499999046325684  3.3499999046325684   52000  \n",
+       "     2      3.309999942779541  3.3299999237060547  3.3299999237060547   27200  \n",
+       "     3      3.069999933242798  3.1700000762939453  3.1700000762939453   24800  \n",
+       "     4     3.0399999618530273  3.1500000953674316  3.1500000953674316    7300  \n",
+       "...                       ...                 ...                 ...     ...  \n",
+       "LAND 2863  14.520000457763672  14.739999771118164  14.695181846618652  298700  \n",
+       "     2864  14.779999732971191  14.800000190734863  14.755000114440918  351800  \n",
+       "     2865    14.6899995803833  14.960000038146973  14.960000038146973  256100  \n",
+       "     2866  14.850000381469727  15.029999732971191  15.029999732971191  195800  \n",
+       "     2867                 NaN                 NaN                 NaN     NaN  \n",
        "\n",
-       "[8604 rows x 7 columns]"
+       "[10029 rows x 7 columns]"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#got the df with right column names; problem: no index for where which dataset ends\n",
-    "df.columns = column_names\n",
-    "df"
+    "big_df.columns = column_names\n",
+    "big_df"
    ]
   },
   {
@@ -667,7 +685,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#okay indexes and column names are there"
+   ]
   }
  ],
  "metadata": {
